fix input overflow

--- a/src/App.css
+++ b/src/App.css
@@ -135,8 +135,11 @@ section {
 
 .bottom {
   bottom: 0;
-}
+  max-width: 600px;
+  overflow-wrap: break-word;
 
 .top {
   top: 0;
+  max-width: 600px;
+  overflow-wrap: break-word;
 }
